<resources>
    <string name="app_name">My Day</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <!-- String with Google Client ID-->
    <string name="server_client_id">773178421521-3jpm3fc16mpp8g1ia05ik7n5icb65bih.apps.googleusercontent.com</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Name</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_intro">IntroActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_entry">Add New Entry</string>
    <string name="enter_your_thoughts_below">What are you thinking about?</string>
    <string name="button_delete">DELETE</string>
    <string name="button_share">SHARE</string>
    <string name="title_activity_about_me">About Me</string>
    <string name="title_activity_calender">Calender</string>
    <string name="FileProviderAuthority">com.simplicity.anuj.myday.fileprovider</string>
    <string name="title_activity_view_entry">Journal Entry</string>
    <string name="enter_here">Enter Here</string>
    <string name="title">Title</string>
    <string name="record_video">Record Video</string>
    <string name="take_photo">Take Photo</string>
    <string name="turn_geotag_on_off">Turn GeoTag On/Off</string>
    <string name="title_activity_view_activity2">Day Entry</string>
    <string name="nothing_found">No Entries Found</string>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="record">Record</string>
    <string name="description_info">Info</string>
    <string name="intro_message">Hit to Record Video</string>
    <string name="permission_request">Request</string>
    <string name="camera_error">ERROR</string>
    <string name="stop">STOP</string>
    <string name="recoed_video">Recoed Video</string>
    <string name="cancel">Cancel</string>
    <string name="weather_data">Weather Data</string>
    <string name="ErrorMessageRetrofit">Failed to feth Weather Data. Please check your network settings and try again.</string>

    <string name="title_activity_fullscreen_image_view">My Day</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="delete_image">Delete Image?</string>
    <string name="yes">Yes</string>
    <string name="no_delete">No</string>
    <string name="loading">Please Wait…</string>
    <string name="top_image">Top Image</string>
    <string name="sign_out_message">It will be easier for My Day to get to know you if you Sign In. It\'s easy and takes just seconds.</string>
    <string name="empty_message">Seems that you have no Entries yet. Press Add Button to make some new Memories.</string>
    <string name="sign_out">Sign Out</string>
    <string name="empty_string">Nothing to show.</string>
    <string name="beta_version">Beta Version</string>
    <string name="myday">MyDay</string>
    <string name="journal_entry">Journal Entry</string>
    <string name="your_activity">Your Activity</string>
    <string name="transition_string">shared_elements_transition</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="what_s_this">What\'s this?</string>
    <string name="today">Date </string>
    <string name="found">Found</string>
    <string name="entries">entries.</string>
    <string name="title_activity_marked">Bookmarks</string>
    <string name="no_favourites_present">No Favourites Present</string>

</resources>
