<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:elevation="4dp"
        android:transitionName="@string/transition_string"
        card_view:cardCornerRadius="0dp">

        <!--android:transitionName="@string/transition_string"-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frame_layout_main_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/card_view_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:scaleType="centerCrop" />

                <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:background="@drawable/scrim_background"/>-->

                <TextView
                    android:id="@+id/card_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="fonts/adlanta.ttf"
                    android:gravity="bottom|start"
                    android:textColor="@color/primary_text"
                    android:textIsSelectable="false"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.like.LikeButton
                    android:id="@+id/marked_favourite_entry"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    card_view:icon_size="25dp"
                    card_view:icon_type="star"
                    android:layout_gravity="top|end"
                    card_view:circle_start_color="@color/colorPrimary"
                    card_view:dots_primary_color="@color/colorAccent"
                    card_view:dots_secondary_color="@color/colorPrimary"
                    card_view:anim_scale_factor="2" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/card_view_share"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:fontFamily="fonts/adlanta.ttf"
                        android:text="@string/button_share"
                        android:textColor="@color/colorAccent" />

                    <Button
                        android:id="@+id/card_view_delete"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toStartOf="@+id/card_view_share"
                        android:fontFamily="fonts/adlanta.ttf"
                        android:text="@string/button_delete"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/card_view_time_stamp_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:fontFamily="fonts/adlanta_light.ttf"
                        android:textStyle="italic" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/card_description_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="fonts/adlanta_light.ttf"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>
